--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/technoco.svg" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/technoco.svg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/service1.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/service2.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/service3.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/service1-1.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/service2-1.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/service3-1.jpg" />
+    <link rel="preload" as="video" href="%PUBLIC_URL%/service1.mp4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Techno co.</title>
   </head>
